--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -11,23 +11,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="user-form-container container">
-        <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control">
-              </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-    </div>
+    <form method="post" action="/user/create-user">
+        <div class="user-form-container container">
+                <h1 class="mt-5">Create user form</h1>
+                <div class="mb-3 mt-4">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
+                </div>
+                <div class="mb-3">
+                <label for="password class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control"name="username" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
 </body>
 </html>
