--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -11,23 +11,56 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <form method="post" action="/user/create-user">
-        <div class="user-form-container container">
-                <h1 class="mt-5">Create user form</h1>
-                <div class="mb-3 mt-4">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
-                </div>
-                <div class="mb-3">
-                <label for="password class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control"name="username" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="container">
+        <div class="user-info-container">
+            <form method="post" action="/user/create-user">
+
+                        <h1 class="mt-5">Create user form</h1>
+                        <div class="mb-3 mt-4">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                        <label for="password class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username</label>
+                            <input type="text" class="form-control"name="username" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
-    </form>
+        <div class="table-user pt-5">
+            <div class="user-list">
+                <h2>User list</h2>
+            </div>
+            <table class="table table-hover table-responsive-xxl">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% listUser.forEach((user, index) => { %>
+                        <tr>
+                            <th scope="row"><%= index + 1 %></th>
+                            <td><%= user.email %></td>
+                            <td><%= user.username %></td>
+                            <td>
+                                <button class="btn btn-info">Edit</button>
+                                <button class="btn btn-danger">Delete</button>
+                            </td>
+                        </tr>
+                    <% }) %>
+                </tbody>
+            </table>
+            
+
+        </div>
+    </div>
 </body>
 </html>
