Edit user information

--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -15,20 +15,20 @@
         <div class="user-info-container">
             <form method="post" action="/user/create-user">
 
-                        <h1 class="mt-5">Create user form</h1>
-                        <div class="mb-3 mt-4">
-                        <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
-                        </div>
-                        <div class="mb-3">
-                        <label for="password class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Username</label>
-                            <input type="text" class="form-control"name="username" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                <h1 class="mt-5">Create user form</h1>
+                <div class="mb-3 mt-4">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control"name="username" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
         <div class="table-user pt-5">
@@ -51,7 +51,7 @@
                             <td><%= user.email %></td>
                             <td><%= user.username %></td>
                             <td>
-                                <button class="btn btn-info">Edit</button>
+                                <a class="btn btn-info" href="user/update-user/<%= user.id %>">Edit</a>
                                 <form style="display: inline" method="post" action="/delete-user/<%=user.id %>">
                                     <button class="btn btn-danger">Delete</button>
                                 </form>
